--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "type": "commonjs",
   "main": "App.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node App.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
